--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
     <div class="section-title">Fight Section</div>
     <div id="fight-section">
-    <button id="attack-button" style="display: none;">Attack</button>
+    <button id="attack-button" class="btn btn-info" style="display: none;">Attack</button>
     </div>
     <div id="action">
     <div class="character-section">
-    <div class="section-title">Defender</div>
+    <div class="section-title">Opponent</div>
     
     <div id="defender"></div>
     </div>
